<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#faefe6">


        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:gravity="center">

            <TableRow
                android:layout_margin="5dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:scaleType="centerInside"
                    android:scaleX="1"
                    android:scaleY="1"
                    android:src="@drawable/bmeb_logo" />
            </TableRow>

            <TableRow android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/splashTitle1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp"
                    android:textStyle="bold|italic" />
            </TableRow>

            <TableRow android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/splashTitle2"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp"
                    android:textStyle="bold|italic" />
            </TableRow>

            <TableRow android:gravity="center">

                <TextView
                    android:layout_gravity="center"
                    android:text="@string/splashSubTitle"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />
            </TableRow>

            <TableRow android:gravity="center">

                <TextView
                    android:layout_gravity="center"
                    android:text="@string/splashVersionInfo"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:textStyle="italic" />
            </TableRow>
        </TableLayout>
    </RelativeLayout>


</RelativeLayout>